fix asset-body styling

--- a/styles-site.css
+++ b/styles-site.css
@@ -2,6 +2,7 @@
 		margin:0px 0px 20px 0px;	
 		background-color:  black;
 		}
+	.asset-body 			{ color: #CFFC00; text-decoration: none; }
 	A 			{ color: #CFFC00; text-decoration: none; }
 	A:link		{ color: #CFFC00; text-decoration: none; }
 	A:visited	{ color: #CFFC00; text-decoration: none; }
